[gd_scene load_steps=12 format=3 uid="uid://bni8u6acyumgq"]

[ext_resource type="Script" path="res://scripts/health_station.gd" id="1_u0itt"]
[ext_resource type="ArrayMesh" uid="uid://cuj7ic0f2bdei" path="res://meshes/health/grapes.obj" id="2_3kmat"]
[ext_resource type="Texture2D" uid="uid://bq02qdwep2736" path="res://sprites/magic_05.png" id="2_be4dm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tkyrd"]
radius = 0.577956
height = 2.63147

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yp853"]
blend_mode = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_be4dm")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_t287a"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x55h1"]
gradient = SubResource("Gradient_t287a")
use_hdr = true

[sub_resource type="Curve" id="Curve_cfscf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.60757, 0.778947), 0.0, 0.0, 0, 0, Vector2(0.932271, 0.0210526), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_g0afp"]
curve = SubResource("Curve_cfscf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jbckh"]
lifetime_randomness = 0.36
direction = Vector3(1, 1, 0)
initial_velocity_min = -5.0
initial_velocity_max = 5.0
angular_velocity_min = 720.0
angular_velocity_max = 1440.0
gravity = Vector3(0, 0, 0)
damping_max = 2.0
scale_min = 0.02
scale_max = 0.5
scale_curve = SubResource("CurveTexture_g0afp")
color = Color(0.882353, 0.490196, 0.941176, 1)
color_ramp = SubResource("GradientTexture1D_x55h1")
turbulence_enabled = true
turbulence_noise_strength = 0.36
turbulence_noise_scale = 0.69
turbulence_noise_speed = Vector3(0, 5, 0)
turbulence_noise_speed_random = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_ig4wi"]

[node name="HealthStation" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.279493, 1, -0.192992)
script = ExtResource("1_u0itt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.264981, 0.610684, 0.50527)
shape = SubResource("CapsuleShape3D_tkyrd")

[node name="MagicParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514588, 0.510891, -0.356331)
material_override = SubResource("StandardMaterial3D_yp853")
cast_shadow = 0
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB(-0.782187, -0.917457, 0.489684, 0.979413, 1.83491, 0.910037)
process_material = SubResource("ParticleProcessMaterial_jbckh")
draw_pass_1 = SubResource("QuadMesh_ig4wi")

[node name="Grapes" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.74846e-07, 0, 4, 0, 4, 0, -4, 0, -1.74846e-07, 0.27243, -0.219321, 0.504199)
mesh = ExtResource("2_3kmat")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="MagicParticles" to="." method="_on_magic_particles_finished"]
